--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "private": true,
- "scripts": {
-  "start": "expo start",
-  "android": "expo start --android",
-  "ios": "expo start --ios",
-  "web": "expo start --web",
-  "build:web": "expo export --platform web"
-}
-,
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build:web": "expo export --platform web"
+  },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
-    "expo": "~52.0.41",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -22,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.1"
+    "@expo/webpack-config": "^19.0.1",
+    "expo": "^52.0.41"
   }
 }
